// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketplaceAppPage should match a snapshot when has an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-intent-danger"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname="el-icon-new"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              style="font-size: 1.25rem;"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </div>
        <div
          class="el-pn-content"
        >
          Something went wrong fetching the app details. Please refresh this page.
        </div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-intent-danger"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <mock-styled.span
          classname="el-icon-new"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            style="font-size: 1.25rem;"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </div>
      <div
        class="el-pn-content"
      >
        Something went wrong fetching the app details. Please refresh this page.
      </div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MarketplaceAppPage should match a snapshot when has data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-auto"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="el-mb5 el-icon-size-large"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 32h38v25H21z"
                fill="#fff"
              />
              <path
                d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84V24.24c.005-2.118 1.75-3.835 3.902-3.84h20.196c2.152.005 3.897 1.722 3.902 3.84v41.922c-.007 2.117-1.75 3.833-3.902 3.838Z"
                fill="#d8dee4"
              />
              <path
                clip-rule="evenodd"
                d="M54.845 67.628h19.866a1.477 1.477 0 0 0 1.472-1.47V24.242a1.478 1.478 0 0 0-1.471-1.47H54.843c-.81.002-1.468.66-1.47 1.47v41.914c.002.81.66 1.468 1.47 1.47h.002ZM54.84 70A3.85 3.85 0 0 1 51 66.16V24.24a3.85 3.85 0 0 1 3.84-3.84h19.875a3.85 3.85 0 0 1 3.84 3.84v41.922A3.85 3.85 0 0 1 74.715 70H54.84Z"
                fill="#d8dee4"
                fill-rule="evenodd"
              />
              <path
                d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84v-4.863h28v4.865c-.007 2.117-1.75 3.833-3.902 3.838Z"
                fill="#607890"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="55"
                y="25"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="66"
                y="25"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="55"
                y="36"
              />
              <rect
                fill="#fff"
                height="9"
                rx="1"
                width="9"
                x="66"
                y="36"
              />
              <rect
                fill="#9faebc"
                height="9"
                rx="1"
                width="9"
                x="55"
                y="47"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="66"
                y="47"
              />
              <path
                d="M37.227 12.002c-2.692-6.627-10.112-9.76-16.572-6.998-4.418 1.888-7.421 6.167-7.765 11.063-3.733.53-6.341 4.063-5.825 7.892.467 3.465 3.356 6.044 6.766 6.041h23.396C42.072 30 46 25.97 46 21s-3.928-8.998-8.773-8.998Z"
                fill="#d8dee4"
              />
              <path
                d="M57.27 72.582h-1.102V42.735c-1.838 2.459-6.61 2.459-8.289 0v8.717H35.224v-5.411c-.592.184-1.208.314-1.858.314-.648 0-1.262-.13-1.855-.314v5.411h-12.05v-7.615c-2.369 2.459-5.92 2.459-8.289 0v28.745H9.997c-1.442 0-2.61 1.212-2.61 2.709s1.168 2.71 2.61 2.71h47.272c3.063-.001 3.015-5.42 0-5.42Zm-9.39-17.277v6.143c0 1.188-1.216 2.164-2.369 2.164H35.224v-8.307h12.655Zm-16.369 0v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
                fill="#798da1"
              />
              <path
                d="M57.27 72.49H9.996c-1.442 0-2.61 1.233-2.61 2.755 0 1.522 1.168 2.755 2.61 2.755h47.272c3.063 0 3.015-5.51 0-5.51Z"
                fill="#506478"
              />
              <path
                d="M4.367 48.047a4.714 4.714 0 0 0 5.865-3.16l.248-.826a4.682 4.682 0 0 0 2.363 3.562c.424.235.877.43 1.38.53a4.71 4.71 0 0 0 5.543-3.693l.115-.574a4.702 4.702 0 0 0 4.696 4.358 4.712 4.712 0 0 0 4.686-4.236l.035-.35a4.673 4.673 0 0 0 2.412 3.97 4.67 4.67 0 0 0 2.288.616 4.67 4.67 0 0 0 2.29-.616 4.68 4.68 0 0 0 2.415-3.97l.033.35a4.712 4.712 0 0 0 6.987 3.637 4.697 4.697 0 0 0 2.394-3.76l.115.574a4.712 4.712 0 0 0 5.545 3.693c.5-.1.955-.294 1.377-.53a4.68 4.68 0 0 0 2.365-3.561l.248.826a4.714 4.714 0 0 0 5.865 3.16 4.7 4.7 0 0 0 3.17-5.85L62.77 28.739A6.655 6.655 0 0 0 56.392 24H11.608a6.655 6.655 0 0 0-6.379 4.74l-4.03 13.457a4.7 4.7 0 0 0 3.168 5.85Z"
                fill="#607890"
              />
              <path
                d="M31.511 55.305v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
                fill="#9faebc"
              />
              <path
                d="M19.46 45.43v6.022h12.051V47.51a4.667 4.667 0 0 1-2.213-3.851l-.035.349a4.712 4.712 0 0 1-6.986 3.637 4.703 4.703 0 0 1-2.396-3.76l-.115.574c-.068.34-.171.666-.305.971ZM35.223 48.073a4.937 4.937 0 0 0 1.066-.445 4.68 4.68 0 0 0 2.413-3.97l.034.35a4.711 4.711 0 0 0 9.143 1.05v6.394H35.223v-3.38Z"
                fill="#fff"
              />
              <path
                d="M47.88 61.448v-6.143H35.222v8.307h10.288c1.152 0 2.368-.977 2.368-2.164Z"
                fill="#d8dee4"
              />
              <path
                d="M50 15.461a3 3 0 0 1 1.062-2.29l10-8.461a3 3 0 0 1 3.876 0l10 8.461A3 3 0 0 1 76 15.461v13.61a2 2 0 0 1-2 2H52a2 2 0 0 1-2-2V15.46Z"
                fill="#7e9bfa"
              />
              <path
                d="M67.486 19.186a1.017 1.017 0 0 1 0 1.768l-6.943 3.978c-.686.393-1.543-.098-1.543-.884v-7.956c0-.785.857-1.276 1.543-.884l6.943 3.978Z"
                fill="#fff"
              />
            </svg>
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            Marketplace Visibility and Installation Management
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
          </mock-styled.p>
          <mock-styled.button
            classname="el-mb5 el-intent-primary"
            type="button"
          >
            <mock-styled.div />
            Back To Apps
          </mock-styled.button>
          <mock-styled.button
            classname="el-mb5 el-intent-primary"
            type="button"
          >
            <mock-styled.div />
            View Listing
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname="el-hfull"
        >
          <mock-styled.div
            classname="el-flex-justify-between"
          >
            <mock-styled.h1
              classname=""
            >
              SOME_NAME
               - 
              Geo Diary
            </mock-styled.h1>
          </mock-styled.div>
          <mock-styled.h2
            classname=""
          >
            Pricing Information
          </mock-styled.h2>
          <div
            class="el-mb11"
          >
            <mock-styled.p
              classname="el-has-grey-text"
            >
              Reapit Ltd
               have specified there is no cost for using this App/Integration.
            </mock-styled.p>
          </div>
          <mock-styled.h2
            classname=""
          >
            Data Permissions
          </mock-styled.h2>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            By installing this app, you are granting the following permissions to your data:
          </mock-styled.p>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div
              classname=""
            >
              Information about your organisation
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Names/email addresses of your users
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read applicants
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read appointments
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Write appointments
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read contacts
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read landlords
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read negotiators
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read offers
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read offices
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read properties
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read tenancies
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read vendors
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              Read Referrals
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.h2
            classname=""
          >
            Application Visibility
          </mock-styled.h2>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            By default, all apps will be visible to all offices/users within your organisation. If you wish to hide an app from the Marketplace, please deselect. Hidden apps (apps that have been deselected) will not be visible in the Marketplace to any offices/users inside of your organisation.
          </mock-styled.p>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.input
              checked="true"
              classname=""
              id="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
            >
              Visible
            </mock-styled.label>
          </mock-styled.div>
          <div
            class="el-mb11"
          >
            <mock-styled.h2
              classname=""
            >
              Current Installations
            </mock-styled.h2>
            <mock-styled.p
              classname="el-has-grey-text"
            >
              This app is not currently installed. You can either install for your organisation or specific office groups in the section below.
            </mock-styled.p>
          </div>
          <mock-styled.h2
            classname=""
          >
            Installation
          </mock-styled.h2>
          <mock-styled.p
            classname="el-has-grey-text el-has-section-margin"
          >
            Please select the type of installation you require for this app:
          </mock-styled.p>
          <mock-styled.div
            classname="el-form-layout-has-margin"
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-mb5"
              >
                <mock-styled.input
                  checked="false"
                  classname=""
                  id="WHOLE_ORG"
                  type="checkbox"
                />
                <mock-styled.label
                  htmlfor="WHOLE_ORG"
                >
                  Install for the whole of your organisation
                </mock-styled.label>
              </mock-styled.div>
              <mock-styled.p
                classname=""
              >
                This will grant the app access to all data for all users and offices across your organisation
              </mock-styled.p>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="el-mb5"
              >
                <mock-styled.input
                  checked="false"
                  classname=""
                  id="SPECIFIC_OFFICE_GROUPS"
                  type="checkbox"
                />
                <mock-styled.label
                  htmlfor="SPECIFIC_OFFICE_GROUPS"
                >
                  Install for specific office groups
                </mock-styled.label>
              </mock-styled.div>
              <mock-styled.p
                classname=""
              >
                This will grant the app access to only data for the specific offices inside of each office group
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="el-mb7"
          >
            <mock-styled.div
              classname="el-button-group-align-right"
            >
              <mock-styled.button
                classname="el-intent-primary"
                disabled="true"
              >
                <mock-styled.div />
                Save
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-auto"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="el-mb5 el-icon-size-large"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 80 80"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 32h38v25H21z"
              fill="#fff"
            />
            <path
              d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84V24.24c.005-2.118 1.75-3.835 3.902-3.84h20.196c2.152.005 3.897 1.722 3.902 3.84v41.922c-.007 2.117-1.75 3.833-3.902 3.838Z"
              fill="#d8dee4"
            />
            <path
              clip-rule="evenodd"
              d="M54.845 67.628h19.866a1.477 1.477 0 0 0 1.472-1.47V24.242a1.478 1.478 0 0 0-1.471-1.47H54.843c-.81.002-1.468.66-1.47 1.47v41.914c.002.81.66 1.468 1.47 1.47h.002ZM54.84 70A3.85 3.85 0 0 1 51 66.16V24.24a3.85 3.85 0 0 1 3.84-3.84h19.875a3.85 3.85 0 0 1 3.84 3.84v41.922A3.85 3.85 0 0 1 74.715 70H54.84Z"
              fill="#d8dee4"
              fill-rule="evenodd"
            />
            <path
              d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84v-4.863h28v4.865c-.007 2.117-1.75 3.833-3.902 3.838Z"
              fill="#607890"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="55"
              y="25"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="66"
              y="25"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="55"
              y="36"
            />
            <rect
              fill="#fff"
              height="9"
              rx="1"
              width="9"
              x="66"
              y="36"
            />
            <rect
              fill="#9faebc"
              height="9"
              rx="1"
              width="9"
              x="55"
              y="47"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="66"
              y="47"
            />
            <path
              d="M37.227 12.002c-2.692-6.627-10.112-9.76-16.572-6.998-4.418 1.888-7.421 6.167-7.765 11.063-3.733.53-6.341 4.063-5.825 7.892.467 3.465 3.356 6.044 6.766 6.041h23.396C42.072 30 46 25.97 46 21s-3.928-8.998-8.773-8.998Z"
              fill="#d8dee4"
            />
            <path
              d="M57.27 72.582h-1.102V42.735c-1.838 2.459-6.61 2.459-8.289 0v8.717H35.224v-5.411c-.592.184-1.208.314-1.858.314-.648 0-1.262-.13-1.855-.314v5.411h-12.05v-7.615c-2.369 2.459-5.92 2.459-8.289 0v28.745H9.997c-1.442 0-2.61 1.212-2.61 2.709s1.168 2.71 2.61 2.71h47.272c3.063-.001 3.015-5.42 0-5.42Zm-9.39-17.277v6.143c0 1.188-1.216 2.164-2.369 2.164H35.224v-8.307h12.655Zm-16.369 0v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
              fill="#798da1"
            />
            <path
              d="M57.27 72.49H9.996c-1.442 0-2.61 1.233-2.61 2.755 0 1.522 1.168 2.755 2.61 2.755h47.272c3.063 0 3.015-5.51 0-5.51Z"
              fill="#506478"
            />
            <path
              d="M4.367 48.047a4.714 4.714 0 0 0 5.865-3.16l.248-.826a4.682 4.682 0 0 0 2.363 3.562c.424.235.877.43 1.38.53a4.71 4.71 0 0 0 5.543-3.693l.115-.574a4.702 4.702 0 0 0 4.696 4.358 4.712 4.712 0 0 0 4.686-4.236l.035-.35a4.673 4.673 0 0 0 2.412 3.97 4.67 4.67 0 0 0 2.288.616 4.67 4.67 0 0 0 2.29-.616 4.68 4.68 0 0 0 2.415-3.97l.033.35a4.712 4.712 0 0 0 6.987 3.637 4.697 4.697 0 0 0 2.394-3.76l.115.574a4.712 4.712 0 0 0 5.545 3.693c.5-.1.955-.294 1.377-.53a4.68 4.68 0 0 0 2.365-3.561l.248.826a4.714 4.714 0 0 0 5.865 3.16 4.7 4.7 0 0 0 3.17-5.85L62.77 28.739A6.655 6.655 0 0 0 56.392 24H11.608a6.655 6.655 0 0 0-6.379 4.74l-4.03 13.457a4.7 4.7 0 0 0 3.168 5.85Z"
              fill="#607890"
            />
            <path
              d="M31.511 55.305v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
              fill="#9faebc"
            />
            <path
              d="M19.46 45.43v6.022h12.051V47.51a4.667 4.667 0 0 1-2.213-3.851l-.035.349a4.712 4.712 0 0 1-6.986 3.637 4.703 4.703 0 0 1-2.396-3.76l-.115.574c-.068.34-.171.666-.305.971ZM35.223 48.073a4.937 4.937 0 0 0 1.066-.445 4.68 4.68 0 0 0 2.413-3.97l.034.35a4.711 4.711 0 0 0 9.143 1.05v6.394H35.223v-3.38Z"
              fill="#fff"
            />
            <path
              d="M47.88 61.448v-6.143H35.222v8.307h10.288c1.152 0 2.368-.977 2.368-2.164Z"
              fill="#d8dee4"
            />
            <path
              d="M50 15.461a3 3 0 0 1 1.062-2.29l10-8.461a3 3 0 0 1 3.876 0l10 8.461A3 3 0 0 1 76 15.461v13.61a2 2 0 0 1-2 2H52a2 2 0 0 1-2-2V15.46Z"
              fill="#7e9bfa"
            />
            <path
              d="M67.486 19.186a1.017 1.017 0 0 1 0 1.768l-6.943 3.978c-.686.393-1.543-.098-1.543-.884v-7.956c0-.785.857-1.276 1.543-.884l6.943 3.978Z"
              fill="#fff"
            />
          </svg>
        </mock-styled.span>
        <mock-styled.p
          classname=""
        >
          Marketplace Visibility and Installation Management
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
        </mock-styled.p>
        <mock-styled.button
          classname="el-mb5 el-intent-primary"
          type="button"
        >
          <mock-styled.div />
          Back To Apps
        </mock-styled.button>
        <mock-styled.button
          classname="el-mb5 el-intent-primary"
          type="button"
        >
          <mock-styled.div />
          View Listing
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname="el-hfull"
      >
        <mock-styled.div
          classname="el-flex-justify-between"
        >
          <mock-styled.h1
            classname=""
          >
            SOME_NAME
             - 
            Geo Diary
          </mock-styled.h1>
        </mock-styled.div>
        <mock-styled.h2
          classname=""
        >
          Pricing Information
        </mock-styled.h2>
        <div
          class="el-mb11"
        >
          <mock-styled.p
            classname="el-has-grey-text"
          >
            Reapit Ltd
             have specified there is no cost for using this App/Integration.
          </mock-styled.p>
        </div>
        <mock-styled.h2
          classname=""
        >
          Data Permissions
        </mock-styled.h2>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          By installing this app, you are granting the following permissions to your data:
        </mock-styled.p>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div
            classname=""
          >
            Information about your organisation
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Names/email addresses of your users
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read applicants
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read appointments
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Write appointments
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read contacts
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read landlords
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read negotiators
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read offers
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read offices
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read properties
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read tenancies
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read vendors
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            Read Referrals
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.h2
          classname=""
        >
          Application Visibility
        </mock-styled.h2>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          By default, all apps will be visible to all offices/users within your organisation. If you wish to hide an app from the Marketplace, please deselect. Hidden apps (apps that have been deselected) will not be visible in the Marketplace to any offices/users inside of your organisation.
        </mock-styled.p>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.input
            checked="true"
            classname=""
            id="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
          >
            Visible
          </mock-styled.label>
        </mock-styled.div>
        <div
          class="el-mb11"
        >
          <mock-styled.h2
            classname=""
          >
            Current Installations
          </mock-styled.h2>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            This app is not currently installed. You can either install for your organisation or specific office groups in the section below.
          </mock-styled.p>
        </div>
        <mock-styled.h2
          classname=""
        >
          Installation
        </mock-styled.h2>
        <mock-styled.p
          classname="el-has-grey-text el-has-section-margin"
        >
          Please select the type of installation you require for this app:
        </mock-styled.p>
        <mock-styled.div
          classname="el-form-layout-has-margin"
        >
          <mock-styled.div>
            <mock-styled.div
              classname="el-mb5"
            >
              <mock-styled.input
                checked="false"
                classname=""
                id="WHOLE_ORG"
                type="checkbox"
              />
              <mock-styled.label
                htmlfor="WHOLE_ORG"
              >
                Install for the whole of your organisation
              </mock-styled.label>
            </mock-styled.div>
            <mock-styled.p
              classname=""
            >
              This will grant the app access to all data for all users and offices across your organisation
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div
              classname="el-mb5"
            >
              <mock-styled.input
                checked="false"
                classname=""
                id="SPECIFIC_OFFICE_GROUPS"
                type="checkbox"
              />
              <mock-styled.label
                htmlfor="SPECIFIC_OFFICE_GROUPS"
              >
                Install for specific office groups
              </mock-styled.label>
            </mock-styled.div>
            <mock-styled.p
              classname=""
            >
              This will grant the app access to only data for the specific offices inside of each office group
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-mb7"
        >
          <mock-styled.div
            classname="el-button-group-align-right"
          >
            <mock-styled.button
              classname="el-intent-primary"
              disabled="true"
            >
              <mock-styled.div />
              Save
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MarketplaceAppPage should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-auto"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="el-mb5 el-icon-size-large"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 32h38v25H21z"
                fill="#fff"
              />
              <path
                d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84V24.24c.005-2.118 1.75-3.835 3.902-3.84h20.196c2.152.005 3.897 1.722 3.902 3.84v41.922c-.007 2.117-1.75 3.833-3.902 3.838Z"
                fill="#d8dee4"
              />
              <path
                clip-rule="evenodd"
                d="M54.845 67.628h19.866a1.477 1.477 0 0 0 1.472-1.47V24.242a1.478 1.478 0 0 0-1.471-1.47H54.843c-.81.002-1.468.66-1.47 1.47v41.914c.002.81.66 1.468 1.47 1.47h.002ZM54.84 70A3.85 3.85 0 0 1 51 66.16V24.24a3.85 3.85 0 0 1 3.84-3.84h19.875a3.85 3.85 0 0 1 3.84 3.84v41.922A3.85 3.85 0 0 1 74.715 70H54.84Z"
                fill="#d8dee4"
                fill-rule="evenodd"
              />
              <path
                d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84v-4.863h28v4.865c-.007 2.117-1.75 3.833-3.902 3.838Z"
                fill="#607890"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="55"
                y="25"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="66"
                y="25"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="55"
                y="36"
              />
              <rect
                fill="#fff"
                height="9"
                rx="1"
                width="9"
                x="66"
                y="36"
              />
              <rect
                fill="#9faebc"
                height="9"
                rx="1"
                width="9"
                x="55"
                y="47"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="66"
                y="47"
              />
              <path
                d="M37.227 12.002c-2.692-6.627-10.112-9.76-16.572-6.998-4.418 1.888-7.421 6.167-7.765 11.063-3.733.53-6.341 4.063-5.825 7.892.467 3.465 3.356 6.044 6.766 6.041h23.396C42.072 30 46 25.97 46 21s-3.928-8.998-8.773-8.998Z"
                fill="#d8dee4"
              />
              <path
                d="M57.27 72.582h-1.102V42.735c-1.838 2.459-6.61 2.459-8.289 0v8.717H35.224v-5.411c-.592.184-1.208.314-1.858.314-.648 0-1.262-.13-1.855-.314v5.411h-12.05v-7.615c-2.369 2.459-5.92 2.459-8.289 0v28.745H9.997c-1.442 0-2.61 1.212-2.61 2.709s1.168 2.71 2.61 2.71h47.272c3.063-.001 3.015-5.42 0-5.42Zm-9.39-17.277v6.143c0 1.188-1.216 2.164-2.369 2.164H35.224v-8.307h12.655Zm-16.369 0v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
                fill="#798da1"
              />
              <path
                d="M57.27 72.49H9.996c-1.442 0-2.61 1.233-2.61 2.755 0 1.522 1.168 2.755 2.61 2.755h47.272c3.063 0 3.015-5.51 0-5.51Z"
                fill="#506478"
              />
              <path
                d="M4.367 48.047a4.714 4.714 0 0 0 5.865-3.16l.248-.826a4.682 4.682 0 0 0 2.363 3.562c.424.235.877.43 1.38.53a4.71 4.71 0 0 0 5.543-3.693l.115-.574a4.702 4.702 0 0 0 4.696 4.358 4.712 4.712 0 0 0 4.686-4.236l.035-.35a4.673 4.673 0 0 0 2.412 3.97 4.67 4.67 0 0 0 2.288.616 4.67 4.67 0 0 0 2.29-.616 4.68 4.68 0 0 0 2.415-3.97l.033.35a4.712 4.712 0 0 0 6.987 3.637 4.697 4.697 0 0 0 2.394-3.76l.115.574a4.712 4.712 0 0 0 5.545 3.693c.5-.1.955-.294 1.377-.53a4.68 4.68 0 0 0 2.365-3.561l.248.826a4.714 4.714 0 0 0 5.865 3.16 4.7 4.7 0 0 0 3.17-5.85L62.77 28.739A6.655 6.655 0 0 0 56.392 24H11.608a6.655 6.655 0 0 0-6.379 4.74l-4.03 13.457a4.7 4.7 0 0 0 3.168 5.85Z"
                fill="#607890"
              />
              <path
                d="M31.511 55.305v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
                fill="#9faebc"
              />
              <path
                d="M19.46 45.43v6.022h12.051V47.51a4.667 4.667 0 0 1-2.213-3.851l-.035.349a4.712 4.712 0 0 1-6.986 3.637 4.703 4.703 0 0 1-2.396-3.76l-.115.574c-.068.34-.171.666-.305.971ZM35.223 48.073a4.937 4.937 0 0 0 1.066-.445 4.68 4.68 0 0 0 2.413-3.97l.034.35a4.711 4.711 0 0 0 9.143 1.05v6.394H35.223v-3.38Z"
                fill="#fff"
              />
              <path
                d="M47.88 61.448v-6.143H35.222v8.307h10.288c1.152 0 2.368-.977 2.368-2.164Z"
                fill="#d8dee4"
              />
              <path
                d="M50 15.461a3 3 0 0 1 1.062-2.29l10-8.461a3 3 0 0 1 3.876 0l10 8.461A3 3 0 0 1 76 15.461v13.61a2 2 0 0 1-2 2H52a2 2 0 0 1-2-2V15.46Z"
                fill="#7e9bfa"
              />
              <path
                d="M67.486 19.186a1.017 1.017 0 0 1 0 1.768l-6.943 3.978c-.686.393-1.543-.098-1.543-.884v-7.956c0-.785.857-1.276 1.543-.884l6.943 3.978Z"
                fill="#fff"
              />
            </svg>
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            Marketplace Visibility and Installation Management
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
          </mock-styled.p>
          <mock-styled.button
            classname="el-mb5 el-intent-primary"
            type="button"
          >
            <mock-styled.div />
            Back To Apps
          </mock-styled.button>
          <mock-styled.button
            classname="el-mb5 el-intent-primary"
            type="button"
          >
            <mock-styled.div />
            View Listing
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname="el-hfull"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-auto"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="el-mb5 el-icon-size-large"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 80 80"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 32h38v25H21z"
              fill="#fff"
            />
            <path
              d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84V24.24c.005-2.118 1.75-3.835 3.902-3.84h20.196c2.152.005 3.897 1.722 3.902 3.84v41.922c-.007 2.117-1.75 3.833-3.902 3.838Z"
              fill="#d8dee4"
            />
            <path
              clip-rule="evenodd"
              d="M54.845 67.628h19.866a1.477 1.477 0 0 0 1.472-1.47V24.242a1.478 1.478 0 0 0-1.471-1.47H54.843c-.81.002-1.468.66-1.47 1.47v41.914c.002.81.66 1.468 1.47 1.47h.002ZM54.84 70A3.85 3.85 0 0 1 51 66.16V24.24a3.85 3.85 0 0 1 3.84-3.84h19.875a3.85 3.85 0 0 1 3.84 3.84v41.922A3.85 3.85 0 0 1 74.715 70H54.84Z"
              fill="#d8dee4"
              fill-rule="evenodd"
            />
            <path
              d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84v-4.863h28v4.865c-.007 2.117-1.75 3.833-3.902 3.838Z"
              fill="#607890"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="55"
              y="25"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="66"
              y="25"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="55"
              y="36"
            />
            <rect
              fill="#fff"
              height="9"
              rx="1"
              width="9"
              x="66"
              y="36"
            />
            <rect
              fill="#9faebc"
              height="9"
              rx="1"
              width="9"
              x="55"
              y="47"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="66"
              y="47"
            />
            <path
              d="M37.227 12.002c-2.692-6.627-10.112-9.76-16.572-6.998-4.418 1.888-7.421 6.167-7.765 11.063-3.733.53-6.341 4.063-5.825 7.892.467 3.465 3.356 6.044 6.766 6.041h23.396C42.072 30 46 25.97 46 21s-3.928-8.998-8.773-8.998Z"
              fill="#d8dee4"
            />
            <path
              d="M57.27 72.582h-1.102V42.735c-1.838 2.459-6.61 2.459-8.289 0v8.717H35.224v-5.411c-.592.184-1.208.314-1.858.314-.648 0-1.262-.13-1.855-.314v5.411h-12.05v-7.615c-2.369 2.459-5.92 2.459-8.289 0v28.745H9.997c-1.442 0-2.61 1.212-2.61 2.709s1.168 2.71 2.61 2.71h47.272c3.063-.001 3.015-5.42 0-5.42Zm-9.39-17.277v6.143c0 1.188-1.216 2.164-2.369 2.164H35.224v-8.307h12.655Zm-16.369 0v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
              fill="#798da1"
            />
            <path
              d="M57.27 72.49H9.996c-1.442 0-2.61 1.233-2.61 2.755 0 1.522 1.168 2.755 2.61 2.755h47.272c3.063 0 3.015-5.51 0-5.51Z"
              fill="#506478"
            />
            <path
              d="M4.367 48.047a4.714 4.714 0 0 0 5.865-3.16l.248-.826a4.682 4.682 0 0 0 2.363 3.562c.424.235.877.43 1.38.53a4.71 4.71 0 0 0 5.543-3.693l.115-.574a4.702 4.702 0 0 0 4.696 4.358 4.712 4.712 0 0 0 4.686-4.236l.035-.35a4.673 4.673 0 0 0 2.412 3.97 4.67 4.67 0 0 0 2.288.616 4.67 4.67 0 0 0 2.29-.616 4.68 4.68 0 0 0 2.415-3.97l.033.35a4.712 4.712 0 0 0 6.987 3.637 4.697 4.697 0 0 0 2.394-3.76l.115.574a4.712 4.712 0 0 0 5.545 3.693c.5-.1.955-.294 1.377-.53a4.68 4.68 0 0 0 2.365-3.561l.248.826a4.714 4.714 0 0 0 5.865 3.16 4.7 4.7 0 0 0 3.17-5.85L62.77 28.739A6.655 6.655 0 0 0 56.392 24H11.608a6.655 6.655 0 0 0-6.379 4.74l-4.03 13.457a4.7 4.7 0 0 0 3.168 5.85Z"
              fill="#607890"
            />
            <path
              d="M31.511 55.305v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
              fill="#9faebc"
            />
            <path
              d="M19.46 45.43v6.022h12.051V47.51a4.667 4.667 0 0 1-2.213-3.851l-.035.349a4.712 4.712 0 0 1-6.986 3.637 4.703 4.703 0 0 1-2.396-3.76l-.115.574c-.068.34-.171.666-.305.971ZM35.223 48.073a4.937 4.937 0 0 0 1.066-.445 4.68 4.68 0 0 0 2.413-3.97l.034.35a4.711 4.711 0 0 0 9.143 1.05v6.394H35.223v-3.38Z"
              fill="#fff"
            />
            <path
              d="M47.88 61.448v-6.143H35.222v8.307h10.288c1.152 0 2.368-.977 2.368-2.164Z"
              fill="#d8dee4"
            />
            <path
              d="M50 15.461a3 3 0 0 1 1.062-2.29l10-8.461a3 3 0 0 1 3.876 0l10 8.461A3 3 0 0 1 76 15.461v13.61a2 2 0 0 1-2 2H52a2 2 0 0 1-2-2V15.46Z"
              fill="#7e9bfa"
            />
            <path
              d="M67.486 19.186a1.017 1.017 0 0 1 0 1.768l-6.943 3.978c-.686.393-1.543-.098-1.543-.884v-7.956c0-.785.857-1.276 1.543-.884l6.943 3.978Z"
              fill="#fff"
            />
          </svg>
        </mock-styled.span>
        <mock-styled.p
          classname=""
        >
          Marketplace Visibility and Installation Management
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
        </mock-styled.p>
        <mock-styled.button
          classname="el-mb5 el-intent-primary"
          type="button"
        >
          <mock-styled.div />
          Back To Apps
        </mock-styled.button>
        <mock-styled.button
          classname="el-mb5 el-intent-primary"
          type="button"
        >
          <mock-styled.div />
          View Listing
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname="el-hfull"
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MarketplaceAppPage should match a snapshot where no orgClientId exists 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-auto"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.span
            classname="el-mb5 el-icon-size-large"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 32h38v25H21z"
                fill="#fff"
              />
              <path
                d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84V24.24c.005-2.118 1.75-3.835 3.902-3.84h20.196c2.152.005 3.897 1.722 3.902 3.84v41.922c-.007 2.117-1.75 3.833-3.902 3.838Z"
                fill="#d8dee4"
              />
              <path
                clip-rule="evenodd"
                d="M54.845 67.628h19.866a1.477 1.477 0 0 0 1.472-1.47V24.242a1.478 1.478 0 0 0-1.471-1.47H54.843c-.81.002-1.468.66-1.47 1.47v41.914c.002.81.66 1.468 1.47 1.47h.002ZM54.84 70A3.85 3.85 0 0 1 51 66.16V24.24a3.85 3.85 0 0 1 3.84-3.84h19.875a3.85 3.85 0 0 1 3.84 3.84v41.922A3.85 3.85 0 0 1 74.715 70H54.84Z"
                fill="#d8dee4"
                fill-rule="evenodd"
              />
              <path
                d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84v-4.863h28v4.865c-.007 2.117-1.75 3.833-3.902 3.838Z"
                fill="#607890"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="55"
                y="25"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="66"
                y="25"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="55"
                y="36"
              />
              <rect
                fill="#fff"
                height="9"
                rx="1"
                width="9"
                x="66"
                y="36"
              />
              <rect
                fill="#9faebc"
                height="9"
                rx="1"
                width="9"
                x="55"
                y="47"
              />
              <rect
                fill="#798da1"
                height="9"
                rx="1"
                width="9"
                x="66"
                y="47"
              />
              <path
                d="M37.227 12.002c-2.692-6.627-10.112-9.76-16.572-6.998-4.418 1.888-7.421 6.167-7.765 11.063-3.733.53-6.341 4.063-5.825 7.892.467 3.465 3.356 6.044 6.766 6.041h23.396C42.072 30 46 25.97 46 21s-3.928-8.998-8.773-8.998Z"
                fill="#d8dee4"
              />
              <path
                d="M57.27 72.582h-1.102V42.735c-1.838 2.459-6.61 2.459-8.289 0v8.717H35.224v-5.411c-.592.184-1.208.314-1.858.314-.648 0-1.262-.13-1.855-.314v5.411h-12.05v-7.615c-2.369 2.459-5.92 2.459-8.289 0v28.745H9.997c-1.442 0-2.61 1.212-2.61 2.709s1.168 2.71 2.61 2.71h47.272c3.063-.001 3.015-5.42 0-5.42Zm-9.39-17.277v6.143c0 1.188-1.216 2.164-2.369 2.164H35.224v-8.307h12.655Zm-16.369 0v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
                fill="#798da1"
              />
              <path
                d="M57.27 72.49H9.996c-1.442 0-2.61 1.233-2.61 2.755 0 1.522 1.168 2.755 2.61 2.755h47.272c3.063 0 3.015-5.51 0-5.51Z"
                fill="#506478"
              />
              <path
                d="M4.367 48.047a4.714 4.714 0 0 0 5.865-3.16l.248-.826a4.682 4.682 0 0 0 2.363 3.562c.424.235.877.43 1.38.53a4.71 4.71 0 0 0 5.543-3.693l.115-.574a4.702 4.702 0 0 0 4.696 4.358 4.712 4.712 0 0 0 4.686-4.236l.035-.35a4.673 4.673 0 0 0 2.412 3.97 4.67 4.67 0 0 0 2.288.616 4.67 4.67 0 0 0 2.29-.616 4.68 4.68 0 0 0 2.415-3.97l.033.35a4.712 4.712 0 0 0 6.987 3.637 4.697 4.697 0 0 0 2.394-3.76l.115.574a4.712 4.712 0 0 0 5.545 3.693c.5-.1.955-.294 1.377-.53a4.68 4.68 0 0 0 2.365-3.561l.248.826a4.714 4.714 0 0 0 5.865 3.16 4.7 4.7 0 0 0 3.17-5.85L62.77 28.739A6.655 6.655 0 0 0 56.392 24H11.608a6.655 6.655 0 0 0-6.379 4.74l-4.03 13.457a4.7 4.7 0 0 0 3.168 5.85Z"
                fill="#607890"
              />
              <path
                d="M31.511 55.305v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
                fill="#9faebc"
              />
              <path
                d="M19.46 45.43v6.022h12.051V47.51a4.667 4.667 0 0 1-2.213-3.851l-.035.349a4.712 4.712 0 0 1-6.986 3.637 4.703 4.703 0 0 1-2.396-3.76l-.115.574c-.068.34-.171.666-.305.971ZM35.223 48.073a4.937 4.937 0 0 0 1.066-.445 4.68 4.68 0 0 0 2.413-3.97l.034.35a4.711 4.711 0 0 0 9.143 1.05v6.394H35.223v-3.38Z"
                fill="#fff"
              />
              <path
                d="M47.88 61.448v-6.143H35.222v8.307h10.288c1.152 0 2.368-.977 2.368-2.164Z"
                fill="#d8dee4"
              />
              <path
                d="M50 15.461a3 3 0 0 1 1.062-2.29l10-8.461a3 3 0 0 1 3.876 0l10 8.461A3 3 0 0 1 76 15.461v13.61a2 2 0 0 1-2 2H52a2 2 0 0 1-2-2V15.46Z"
                fill="#7e9bfa"
              />
              <path
                d="M67.486 19.186a1.017 1.017 0 0 1 0 1.768l-6.943 3.978c-.686.393-1.543-.098-1.543-.884v-7.956c0-.785.857-1.276 1.543-.884l6.943 3.978Z"
                fill="#fff"
              />
            </svg>
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            Marketplace Visibility and Installation Management
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
          </mock-styled.p>
          <div
            class="el-mb5"
          >
            <mock-styled.p
              classname=""
            >
              Organisations
            </mock-styled.p>
            <mock-styled.p
              classname="el-has-grey-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </mock-styled.p>
            <mock-styled.div
              classname="el-border-radius"
            >
              <mock-styled.div>
                <mock-styled.select
                  classname="el-wfull"
                  value="SOME_ID"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </mock-styled.select>
                <mock-styled.label
                  htmlfor="myId"
                >
                  Select Organisation
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </div>
          <mock-styled.button
            classname="el-mb5 el-intent-primary"
            type="button"
          >
            <mock-styled.div />
            Back To Apps
          </mock-styled.button>
          <mock-styled.button
            classname="el-mb5 el-intent-primary"
            type="button"
          >
            <mock-styled.div />
            View Listing
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section
          classname="el-hfull"
        >
          <mock-styled.div
            classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <mock-styled.span
                classname="el-icon-new"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </div>
            <div
              class="el-pn-content"
            >
              No organisation selected. You need to select an organisation to view the app details.
            </div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-auto"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.span
          classname="el-mb5 el-icon-size-large"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 80 80"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 32h38v25H21z"
              fill="#fff"
            />
            <path
              d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84V24.24c.005-2.118 1.75-3.835 3.902-3.84h20.196c2.152.005 3.897 1.722 3.902 3.84v41.922c-.007 2.117-1.75 3.833-3.902 3.838Z"
              fill="#d8dee4"
            />
            <path
              clip-rule="evenodd"
              d="M54.845 67.628h19.866a1.477 1.477 0 0 0 1.472-1.47V24.242a1.478 1.478 0 0 0-1.471-1.47H54.843c-.81.002-1.468.66-1.47 1.47v41.914c.002.81.66 1.468 1.47 1.47h.002ZM54.84 70A3.85 3.85 0 0 1 51 66.16V24.24a3.85 3.85 0 0 1 3.84-3.84h19.875a3.85 3.85 0 0 1 3.84 3.84v41.922A3.85 3.85 0 0 1 74.715 70H54.84Z"
              fill="#d8dee4"
              fill-rule="evenodd"
            />
            <path
              d="M75.098 70H54.902c-2.152-.005-3.897-1.722-3.902-3.84v-4.863h28v4.865c-.007 2.117-1.75 3.833-3.902 3.838Z"
              fill="#607890"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="55"
              y="25"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="66"
              y="25"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="55"
              y="36"
            />
            <rect
              fill="#fff"
              height="9"
              rx="1"
              width="9"
              x="66"
              y="36"
            />
            <rect
              fill="#9faebc"
              height="9"
              rx="1"
              width="9"
              x="55"
              y="47"
            />
            <rect
              fill="#798da1"
              height="9"
              rx="1"
              width="9"
              x="66"
              y="47"
            />
            <path
              d="M37.227 12.002c-2.692-6.627-10.112-9.76-16.572-6.998-4.418 1.888-7.421 6.167-7.765 11.063-3.733.53-6.341 4.063-5.825 7.892.467 3.465 3.356 6.044 6.766 6.041h23.396C42.072 30 46 25.97 46 21s-3.928-8.998-8.773-8.998Z"
              fill="#d8dee4"
            />
            <path
              d="M57.27 72.582h-1.102V42.735c-1.838 2.459-6.61 2.459-8.289 0v8.717H35.224v-5.411c-.592.184-1.208.314-1.858.314-.648 0-1.262-.13-1.855-.314v5.411h-12.05v-7.615c-2.369 2.459-5.92 2.459-8.289 0v28.745H9.997c-1.442 0-2.61 1.212-2.61 2.709s1.168 2.71 2.61 2.71h47.272c3.063-.001 3.015-5.42 0-5.42Zm-9.39-17.277v6.143c0 1.188-1.216 2.164-2.369 2.164H35.224v-8.307h12.655Zm-16.369 0v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
              fill="#798da1"
            />
            <path
              d="M57.27 72.49H9.996c-1.442 0-2.61 1.233-2.61 2.755 0 1.522 1.168 2.755 2.61 2.755h47.272c3.063 0 3.015-5.51 0-5.51Z"
              fill="#506478"
            />
            <path
              d="M4.367 48.047a4.714 4.714 0 0 0 5.865-3.16l.248-.826a4.682 4.682 0 0 0 2.363 3.562c.424.235.877.43 1.38.53a4.71 4.71 0 0 0 5.543-3.693l.115-.574a4.702 4.702 0 0 0 4.696 4.358 4.712 4.712 0 0 0 4.686-4.236l.035-.35a4.673 4.673 0 0 0 2.412 3.97 4.67 4.67 0 0 0 2.288.616 4.67 4.67 0 0 0 2.29-.616 4.68 4.68 0 0 0 2.415-3.97l.033.35a4.712 4.712 0 0 0 6.987 3.637 4.697 4.697 0 0 0 2.394-3.76l.115.574a4.712 4.712 0 0 0 5.545 3.693c.5-.1.955-.294 1.377-.53a4.68 4.68 0 0 0 2.365-3.561l.248.826a4.714 4.714 0 0 0 5.865 3.16 4.7 4.7 0 0 0 3.17-5.85L62.77 28.739A6.655 6.655 0 0 0 56.392 24H11.608a6.655 6.655 0 0 0-6.379 4.74l-4.03 13.457a4.7 4.7 0 0 0 3.168 5.85Z"
              fill="#607890"
            />
            <path
              d="M31.511 55.305v8.307H21.435c-1.152 0-1.974-.968-1.974-2.164v-6.143h12.05Z"
              fill="#9faebc"
            />
            <path
              d="M19.46 45.43v6.022h12.051V47.51a4.667 4.667 0 0 1-2.213-3.851l-.035.349a4.712 4.712 0 0 1-6.986 3.637 4.703 4.703 0 0 1-2.396-3.76l-.115.574c-.068.34-.171.666-.305.971ZM35.223 48.073a4.937 4.937 0 0 0 1.066-.445 4.68 4.68 0 0 0 2.413-3.97l.034.35a4.711 4.711 0 0 0 9.143 1.05v6.394H35.223v-3.38Z"
              fill="#fff"
            />
            <path
              d="M47.88 61.448v-6.143H35.222v8.307h10.288c1.152 0 2.368-.977 2.368-2.164Z"
              fill="#d8dee4"
            />
            <path
              d="M50 15.461a3 3 0 0 1 1.062-2.29l10-8.461a3 3 0 0 1 3.876 0l10 8.461A3 3 0 0 1 76 15.461v13.61a2 2 0 0 1-2 2H52a2 2 0 0 1-2-2V15.46Z"
              fill="#7e9bfa"
            />
            <path
              d="M67.486 19.186a1.017 1.017 0 0 1 0 1.768l-6.943 3.978c-.686.393-1.543-.098-1.543-.884v-7.956c0-.785.857-1.276 1.543-.884l6.943 3.978Z"
              fill="#fff"
            />
          </svg>
        </mock-styled.span>
        <mock-styled.p
          classname=""
        >
          Marketplace Visibility and Installation Management
        </mock-styled.p>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
        </mock-styled.p>
        <div
          class="el-mb5"
        >
          <mock-styled.p
            classname=""
          >
            Organisations
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </mock-styled.p>
          <mock-styled.div
            classname="el-border-radius"
          >
            <mock-styled.div>
              <mock-styled.select
                classname="el-wfull"
                value="SOME_ID"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </mock-styled.select>
              <mock-styled.label
                htmlfor="myId"
              >
                Select Organisation
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.button
          classname="el-mb5 el-intent-primary"
          type="button"
        >
          <mock-styled.div />
          Back To Apps
        </mock-styled.button>
        <mock-styled.button
          classname="el-mb5 el-intent-primary"
          type="button"
        >
          <mock-styled.div />
          View Listing
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section
        classname="el-hfull"
      >
        <mock-styled.div
          classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <mock-styled.span
              classname="el-icon-new"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                style="font-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </div>
          <div
            class="el-pn-content"
          >
            No organisation selected. You need to select an organisation to view the app details.
          </div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
